# decimal

./: CMakeLists.txt  Dockerfile  README.md  run.sh
src/: decimal.h  main.cpp
test/: decimal_test.cpp
